tests/ui/pin_project/packed_sneaky-1.stderr
error: #[pin_project] attribute may not be used on #[repr(packed)] types
 --> $DIR/packed_sneaky-1.rs:8:1
  |
8 | #[hidden_repr(packed)]
  | ^^^^^^^^^^^^^^^^^^^^^^

error: #[pin_project] attribute may not be used on #[repr(packed)] types
  --> $DIR/packed_sneaky-1.rs:15:1
   |
15 | #[hidden_repr(packed)]
   | ^^^^^^^^^^^^^^^^^^^^^^

error: #[pin_project] attribute may not be used on #[repr(packed)] types
  --> $DIR/packed_sneaky-1.rs:24:1
   |
24 | #[hidden_repr(packed)]
   | ^^^^^^^^^^^^^^^^^^^^^^
